--- a/MIDSEM/style.css
+++ b/MIDSEM/style.css
@@ -52,8 +52,8 @@ main {
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+    max-width: 60%;
+    height: 400px;
     display: block;
     margin: 1rem auto;
     border-radius: 4px;
